--- a/index.html
+++ b/index.html
@@ -5,14 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>food-network</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1> Skip The Diet,</h1>
-    <h1>Just Eat Healthy</h1>
-    <h1>With Food Network </h1>
+    <section>
+        <div class="web-developer">
+            <div class="network">
+
+                <h1><span class=" orange">Skip</span> The Diet, <br>
+                    Just Eat Healthy With Food Network</h1>
+
+                <P>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+                <a class="link" target="_blank" href="https://github.com/programmingHero1">Order Food</a>
+
+            </div>
+            <div class="network">
+                <img src="image/Group 8425.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="image">
+        <div class="web-developer">
+            <div class="network">
+                <img src="image/Person Image.png" alt="">
+
+            </div>
+
+
+            <div class="network">
+                <h1> About Me </h1>
+                <p>Rewona’s kitchen brings you home-cooked food in a healthy environment, where you can order the
+                    food
+                    you need. Our commitment is to deliver your favorite food in a healthy environment.Fun
+                    all-encompassing healthy food made in a home environment.</p>
+                <a class="link" target="_blank" href="https://github.com/programmingHero1">Contact Me</a>
+            </div>
+        </div>
+
+
+    </section>
+
+
+
+
+
 </body>
 
 </html>
