--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h1> About Me </h1>
                 <p>Rewona’s kitchen brings you home-cooked food in a healthy environment, where you can order the
                     food
-                    you need. Our commitment is to deliver your favorite food in a healthy environment.Fun
+                    you Our commitment is to deliver your favorite food in a healthy environment.Fun
                     all-encompassing healthy food made in a home environment.</p>
                 <a class="link" target="_blank" href="https://github.com/programmingHero1">Contact Me</a>
             </div>
@@ -48,10 +48,50 @@
 
 
     </section>
+    <div class="text">
+
+        <h1>Our recipies</h1>
+        <footer>
+            <p>Rewona’s kitchen brings you home-cooked food in a healthy environment, where you can order the food you
+                Our commitment is to deliver your favorite food in a healthy environment.Fun all-encompassing healthy
+                food
+                made in a home environment.</p>
+        </footer>
+        <section>
+            <div class="web-developer">
+                <div class="my">
+                    <img src="image/Project Cover.jpg" alt="">
+                    <h2>Recipie Title</h2>
+                    <p>Our commitment is to deliver your favorite food in a healthy environment.Fun all healthy food
+                        made in
+                        a home environment</p>
+                </div>
+
+
+                <div class="my">
+
+                    <img src="image/Project Cover1.jpg" alt="">
+
+                    <h2>Recipie Title</h2>
+                    <p>Our commitment is to deliver your favorite food in a healthy environment.Fun all healthy food
+                        made in
+                        a home environment</p>
+                </div>
+                <div class="my">
+
+                    <img src="image/Project Cover.png" alt="">
+
+                    <h2>Recipie Title</h2>
+                    <p>Our commitment is to deliver your favorite food in a healthy environment.Fun all healthy food
+                        made in
+                        a home environment.</p>
 
 
 
+                </div>
+            </div>
 
+        </section>
 
 </body>
 
