--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
     <div class="text">
 
         <h1>Our recipies</h1>
-        <footer>
+
+        <div>
             <p>Rewona’s kitchen brings you home-cooked food in a healthy environment, where you can order the food you
                 Our commitment is to deliver your favorite food in a healthy environment.Fun all-encompassing healthy
                 food
                 made in a home environment.</p>
-        </footer>
+        </div>
         <section>
             <div class="web-developer">
                 <div class="my">
@@ -93,6 +94,28 @@
 
         </section>
 
+        <div class="id">
+            <div class="box">
+                <h2>My Identity</h2>
+                <p>
+                    Name: Rakib Hossain <br>
+                    Father's Name: A. Sobahan <br>
+                    Mother's Name: Rokeya Begum <br>
+                    Date of Birth: 30 December, 2001
+                </p>
+            </div>
+            <div class="box">
+                <h2>My Hobbies</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta consequuntur quae aperiam aliquam
+                    labore omnis sed, ullam repudiandae nesciunt amet!</p>
+            </div>
+        </div>
+        <div></div>
+        <footer>
+            <h2> <span class="orange">FOOD</span> NETWORK</h2>
+            <P>Eat healthy to live healthy. Live healthy to live happy.</P>
+
+        </footer>
 </body>
 
 </html>
